syntax = "proto3";
package nibiru.txfees.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/NibiruChain/nibiru/v2/x/txfees/types";

// FeeToken is a struct that specifies a token that can be used as a transaction fee asset in the Nibiru network.
// The conversion rate of the fee token to the native token (nibiru) is 1:1.
message FeeToken {
  option (gogoproto.equal) = true;

  string address = 1 [ (gogoproto.moretags) = "yaml:\"denom\"" ];
}