syntax = "proto3";
package nibiru.txfees.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/duration.proto";

import "nibiru/txfees/v1/feetoken.proto";

option go_package = "github.com/NibiruChain/nibiru/v2/x/txfees/types";

service Query {
  // FeeTokens returns the list of fee token addresses.
  rpc FeeTokens(QueryFeeTokensRequest) returns (QueryFeeTokensResponse) {
    option (google.api.http).get = "/nibiru/txfees/v1/fee_token";
  }
}

message QueryFeeTokensRequest {}
message QueryFeeTokensResponse {
  repeated FeeToken fee_tokens = 1 [
    (gogoproto.moretags) = "yaml:\"fee_token\"",
    (gogoproto.nullable) = false
  ];
}